@@ -15,22 +15,32 @@ import com.g15.library_system.view.overrideComponent.tables.CheckboxTablePanel;
 import java.awt.*;
 import java.util.ArrayList;
 import java.util.Map;
+import java.util.stream.Collectors;
 import javax.swing.*;
+
+import com.g15.library_system.view.overrideComponent.toast.ToastNotification;
 import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
 public class NotifyNewBookPanel extends JPanel {
   private CheckboxTablePanel checkboxTablePanel;
+  private EmailFormPanel emailContentPanel;
 
   private BookController bookController = ApplicationContextProvider.getBean(BookController.class);
   private ReaderController readerController =
       ApplicationContextProvider.getBean(ReaderController.class);
 
+  private String[] emailReceiveNotification = new String[0];
+  private java.util.List<TitleAndFirstImageBookDTO> titleAndFirstImageBookDTOS = new ArrayList<>();
+
   private BookMapper bookMapper = ApplicationContextProvider.getBean(BookMapperImpl.class);
   private java.util.List<NotifyBookResponse> notifyBookResponses = new ArrayList<>();
 
   private Map<ApiKey, Runnable> mapApi =
-      Map.of(ApiKey.SEND_EMAIL, () -> this.sendEmailNotifyNewBook());
+      Map.of(ApiKey.SEND_EMAIL,
+      () -> this.sendEmailNotifyNewBook()
+      ,ApiKey.RELOAD,
+      ()-> this.reload() );
 
   public NotifyNewBookPanel() {
     this.initPanel();
@@ -43,12 +53,7 @@ public class NotifyNewBookPanel extends JPanel {
 
     String[] columns = new String[] {"", "Title", "Author"};
 
-    Object[][] data = {
-      {"b1", "n2", "df"},
-      {"b1", "n2", "df"},
-      {"b1", "n2", "df"},
-      {"b1", "n2", "df"}
-    };
+    Object[][] data = {};
 
     RoundedShadowPanel roundedShadowPanel = new RoundedShadowPanel();
     this.checkboxTablePanel = new CheckboxTablePanel(columns, data);
@@ -56,10 +61,11 @@ public class NotifyNewBookPanel extends JPanel {
     roundedShadowPanel.add(this.checkboxTablePanel);
 
     RoundedShadowPanel roundedShadowPanelEmailForm = new RoundedShadowPanel();
-    JPanel emailContentPanel = new EmailFormPanel(this.mapApi);
-    emailContentPanel.setPreferredSize(new Dimension(750, 650));
-    emailContentPanel.setBackground(Style.LIGHT_WHITE_BACKGROUND);
-    roundedShadowPanelEmailForm.add(emailContentPanel);
+    this.emailContentPanel = new EmailFormPanel(this.mapApi);
+
+    this.emailContentPanel.setPreferredSize(new Dimension(750, 650));
+    this.emailContentPanel.setBackground(Style.LIGHT_WHITE_BACKGROUND);
+    roundedShadowPanelEmailForm.add(this.emailContentPanel);
 
     centerPanel.add(roundedShadowPanel, BorderLayout.CENTER);
     centerPanel.add(roundedShadowPanelEmailForm, BorderLayout.EAST);
@@ -71,24 +77,88 @@ public class NotifyNewBookPanel extends JPanel {
   private void upDataIntoTable() {
     this.checkboxTablePanel.removeAllDataTable();
     this.notifyBookResponses.addAll(this.bookController.getAllNewBooks());
+    log.info("size {}",this.notifyBookResponses.size());
     this.checkboxTablePanel.addDataToTable(
-        this.bookMapper.toDataNotifyBookTable(this.notifyBookResponses));
+    this.bookMapper.toDataNotifyBookTable(this.notifyBookResponses));
+    this.initData();
   }
 
   private java.util.List<TitleAndFirstImageBookDTO> buildEmailNotificationNewBooks() {
     return this.notifyBookResponses.stream()
         .map(
             notifyBookResponses -> this.bookMapper.toTitleAndFirstImageBookDTO(notifyBookResponses))
-        .toList();
+        .collect(Collectors.toList());
   }
 
   private void sendEmailNotifyNewBook() {
+
     var content =
         EmailNotificationNewBooksDTO.builder()
-            .emails(this.readerController.getAllEmailAcceptNotifyNewBook())
-            .titleAndFirstImageDTOS(this.buildEmailNotificationNewBooks())
+            .emails(this.emailReceiveNotification)
+            .titleAndFirstImageDTOS(this.titleAndFirstImageBookDTOS)
             .build();
+
     log.info(" 😁😁😁😁😁 Build content send email {}", content);
-    // continue...
+    this.bookController.sendEmailNotificationNewBook(content);
+
+    ToastNotification panel = new
+            ToastNotification(JOptionPane.getFrameForComponent(this), ToastNotification.Type.INFO,
+            ToastNotification.Location.TOP_CENTER, "Send notification successful");
+    panel.showNotification();
   }
+
+  public void initData() {
+    this.emailReceiveNotification = this.readerController.getAllEmailAcceptNotifyNewBook();
+    this.titleAndFirstImageBookDTOS = this.buildEmailNotificationNewBooks();
+
+    this.loadEmails();
+    this.loadContentEmails();
+    this.loadImages();
+  }
+
+  public void loadImages() {
+    var images =
+        this.titleAndFirstImageBookDTOS.stream()
+            .map(TitleAndFirstImageBookDTO::getFirstImage)
+            .collect(Collectors.toList());
+
+    this.emailContentPanel.loadImages(images);
+  }
+
+  public void loadContentEmails() {
+
+    StringBuilder content = new StringBuilder();
+    content.append("""
+                Friendly & inviting:\n
+                Have You Seen Our New Books Yet? \n
+                New Books Are Waiting for You!\n
+                Fresh Reads Just Arrived!\n
+                Check Out What’s New at the Library!\n
+                """);
+    for (int i = 0; i < this.titleAndFirstImageBookDTOS.size(); i++) {
+      content.append(i + 1 + "." + this.titleAndFirstImageBookDTOS.get(i).getTitle() + "\n");
+    }
+    this.emailContentPanel.loadContent(content.toString() ,"Fit Library, New book");
+  }
+
+  public void loadEmails() {
+    this.emailContentPanel.loadEmail(this.emailReceiveNotification);
+  }
+
+  public void removeAllDataInPanel(){
+    this.notifyBookResponses.clear();
+    this.titleAndFirstImageBookDTOS.clear();
+    this.emailContentPanel.loadEmail(null);
+    this.emailContentPanel.loadContent("","");
+    this.emailContentPanel.removeAllImages();
+    this.checkboxTablePanel.removeAllDataTable();
+  }
+
+  public void reload(){
+    this.removeAllDataInPanel();
+    this.upDataIntoTable();
+  }
+
+
+
 }
